--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@
 
 #app {
   max-width: 1280px;
+  min-width: min-content;
   margin: 0 auto;
   padding: 2rem;
 
@@ -30,7 +31,7 @@ a,
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+   
+    padding: 1 1rem;
   }
 }
