--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,10 @@
-@import "./base.css";
+
 @import "./base.scss";
 
 #app {
-  max-width: 1280px;
-  min-width: min-content;
+  
   margin: 0 auto;
-  padding: 2rem;
+  padding: rem;
 
   font-weight: normal;
 }
