--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -58,18 +58,20 @@
   position: relative;
   font-weight: normal;
 }
-
+*/
+@media screen and (min-width: 400px) and (max-width: 1224px)
+{ /*Reglas CSS*/ 
 body {
   min-height: 100vh;
-  color: var(--color-text);
+  color: green;
   background: var(--color-background);
   transition: color 0.5s, background-color 0.5s;
-  line-height: 1.6;
+
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  font-size: 15px;
+  font-size: 25px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
- */
+}}
+ 
